RESOLVED FIXED235755
REGRESSION(r281687): Space widths have synthetic bold applied to them in the fast text codepath but not the complex text codepath
https://bugs.webkit.org/show_bug.cgi?id=235755
Summary REGRESSION(r281687): Space widths have synthetic bold applied to them in the ...
Myles C. Maxfield
Reported 2022-01-27 22:13:28 PST
REGRESSION(r281687): Space widths have synthetic bold applied to them in the fast text codepath but not the complex text codepath
Attachments
Patch (7.01 KB, patch)
2022-01-27 22:20 PST, Myles C. Maxfield
no flags
Patch (14.66 KB, patch)
2022-01-28 16:01 PST, Myles C. Maxfield
simon.fraser: review+
ews-feeder: commit-queue-
Patch for committing (16.22 KB, patch)
2022-01-28 18:05 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2022-01-27 22:20:59 PST
EWS Watchlist
Comment 2 2022-01-27 22:22:22 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Jon Lee
Comment 3 2022-01-28 12:14:07 PST
Myles C. Maxfield
Comment 4 2022-01-28 16:01:11 PST
Myles C. Maxfield
Comment 5 2022-01-28 18:05:59 PST
Created attachment 450299 [details] Patch for committing
Myles C. Maxfield
Comment 6 2022-01-28 20:44:13 PST
Tim Nguyen (:ntim)
Comment 7 2024-07-31 23:17:19 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/47402
Note You need to log in before you can comment on or make changes to this bug.